# break-demo

./: .clangd  .gitignore  Cargo.toml  makefile  todo.md
.cargo/: config.toml
assets/: A.xcf  B.xcf  E.xcf  GameBorder.xcf  I.xcf  K.xcf  PowerBorder.xcf  R.xcf  S.xcf  TripleBorder.xcf  X.xcf  background.wgsl  defense_shader.wgsl
break-desktop/: Cargo.toml
break-desktop/src/: main.rs
break-main/: Cargo.toml
break-main/src/: lib.rs
break-wasm/: Cargo.toml  index.html
break-wasm/src/: lib.rs
engine/: Cargo.toml
engine/src/: buffers.rs  context.rs  description.rs  empty.rs  font.rs  layout.rs  lib.rs  pass.rs  passmanager.rs  pipeline.rs  scene.rs  texture.rs  uniform.rs  vertex.rs  window.rs
game-logic/: Cargo.toml
game-logic/src/: board.rs  coord.rs  events.rs  lib.rs  piece.rs  single.rs  triple.rs
render-logic/: Cargo.toml
render-logic/src/: background.rs  lib.rs
src/: main.c
src/pieces/: single.c  single.h  triple.c  triple.h
