[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
image = { version = "0.24", features = ["png"] }
bytemuck = { version = "1.16", features = ["derive"] }
glyphon = "0"
cfg-if = "1"
env_logger = "0.11.6"
log = "0.4.25"
wgpu = "24.0.0"
winit = "0.29"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "24.0.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
